Content square click actions

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="skip-button-container">
       <a id="skip-button">Skip</a>
     </div>
-    <div id="welcome-page-text" class="container">
+    <div class="container welcome-page-text">
       <div id="int-text-1" class="glitch loading-intercepted-text typewriter" data-text="LOADING INTERCEPTED...">LOADING
         INTERCEPTED...</div>
       <div id="int-text-2" class="glitch loading-intercepted-text typewriter"
@@ -75,6 +75,16 @@
             <div class="welcome-box-label center">Panda</div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container welcome-page-text">
+
+      <div id="int-text-5" class="loading-intercepted-text typewriter hidden"
+        data-text="Thanks! I knew you'd like pandas too! ʕ•ᴥ•ʔ">Thanks! I knew you'd like pandas too! ʕ•ᴥ•ʔ
+      </div>
+      <div id="int-text-6" class="glitch loading-intercepted-text typewriter hidden"
+        data-text="If you ever change your mind, just click the panda! K bye!">If you ever change your mind, just click the panda! K bye!
       </div>
     </div>
   </div>
@@ -144,26 +154,25 @@
   </div>
 
   <div id="content">
-    <div class="row">
-      <div class="col-6 content-square" id="about-square">
+
+      <div class="content-square" id="about-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-top center">About</div>
       </div>
-      <div class="col-6 content-square" id="code-square">
+      <div class="content-square" id="code-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-bottom center">Software + Games</div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-6 content-square" id="org-square">
+
+
+      <div class="content-square" id="org-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-bottom center">Organizations</div>
       </div>
-      <div class="col-6 content-square" id="art-square">
+      <div class="content-square" id="art-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-top center">Art + Design</div>
       </div>
-    </div>
 
     <div id="back-button-container">
       <button id="back-button" class="expand-button">
