Polish theme switching

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/custom.css">
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Khand&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Cormorant+Garamond&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -58,7 +58,7 @@
               <div class="splash-image-pixel center">
               </div>
             </div>
-            <div class="welcome-box-label center">Panda</div>
+            <div class="welcome-box-label center" id="pixel-label">Panda</div>
           </div>
         </div>
         <div class="col-2 welcome-choice-or">
@@ -72,7 +72,7 @@
               <div class="splash-image-art center">
               </div>
             </div>
-            <div class="welcome-box-label center">Panda</div>
+            <div class="welcome-box-label center" id="art-label">Panda</div>
           </div>
         </div>
       </div>
