--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
   <div id="white-overlay"></div>
 
-  <div id="welcome-page">
+  <!-- REMOVE HIDDEN!!! -->
+  <div id="welcome-page" class="hidden">
     <div id="skip-button-container">
       <a id="skip-button">Skip</a>
     </div>
@@ -168,6 +169,9 @@
       <div class="content-square" id="org-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-bottom center">Organizations</div>
+        <img id="org-img-1" class="center" src="img/bananium-icon.png"></img>
+        <img id="org-img-2" class="center" src="img/2tbs.png"></img>
+        <img id="org-img-3" class="center" src="img/launchhacks-logo.png"></img>
       </div>
       <div class="content-square" id="art-square">
         <div class="nohover-overlay"></div>
