Implement about image, reorder org slideshow

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
       <div class="content-square" id="about-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-top center">About</div>
+        <img id="about-img" src="img/panda.svg">
       </div>
       <div class="content-square" id="code-square">
         <div class="nohover-overlay"></div>
@@ -169,13 +170,14 @@
       <div class="content-square" id="org-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-bottom center">Organizations</div>
-        <img id="org-img-1" class="center" src="img/bananium-icon.png"></img>
+        <img id="org-img-1" class="center" src="img/launchhacks-logo.png"></img>
         <img id="org-img-2" class="center" src="img/2tbs.png"></img>
-        <img id="org-img-3" class="center" src="img/launchhacks-logo.png"></img>
+        <img id="org-img-3" class="center" src="img/bananium-icon.png"></img>
       </div>
       <div class="content-square" id="art-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-top center">Art + Design</div>
+        <img id="art-img" src="img/design.png">
       </div>
 
     <div id="back-button-container">
