Clean up css, add mobile video placeholder

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
   </div>
 
-  <div id="splash-video-container">
+  <div class="splash-video-container">
     <video id="splash-video" autoplay muted>
       <source src="img/splashVideo.mp4" type="video/mp4">
     </video>
@@ -184,9 +184,11 @@
       <div class="content-square" id="art-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-top center">Art + Design</div>
-        <video id="design-video" loop muted>
-          <source src="img/design.mp4" type="video/mp4">
-        </video>
+        <div id="splash-video-container">
+          <video id="design-video" loop muted>
+            <source src="img/design.mp4" type="video/mp4">
+          </video>
+        </div>
       </div>
 
     <div id="back-button-container">
