Code square animation

--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
       <div class="content-square" id="code-square">
         <div class="nohover-overlay"></div>
         <div class="content-label-bottom center">Software + Games</div>
+
+        <div id="code-square-panda"></div>
+        <div id="code-square-ground"></div>
       </div>
 
 
