Framework for code section

--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
         <div id="code-square-panda"></div>
         <div id="code-square-ground"></div>
       </div>
+
+      <div class="content-square-details">
+        <div class="container" id="code-content">
+          <div class="code-section websites-section">
+            <div class="code-tab websites-section center">
+              Websites
+            </div>
+
+            <div class="row">
+              <div class="col-3 code-image-container center">
+                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
+                <div class="code-hover">
+                  Title
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
 
@@ -292,7 +311,14 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
+  <div id="code-modals">
+    <div class="code-modal websites-section center" id="img-mysite-modal">
+      <div class="close-modal-button">
+        <i class="fas fa-times"></i>
+      </div>
+      <div class="modal-title">Bo</div>
+    </div>
+  </div>
 
 
 </body>
