--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <link type="text/css" rel="stylesheet" href="js/vendor/lightGallery-1.6.12/css/lightgallery.min.css" />
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Khand&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Cormorant+Garamond|Source+Sans+Pro&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Cormorant+Garamond|Source+Sans+Pro&display=swap"
     rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
@@ -112,48 +113,53 @@
       <div class="row">
         <div class="col-12 center" id="logo">
           <div class="grey-fill grey-fill-pixel center">
+            <div class="splash-image-pixel center">
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="row center">
-        <div class="loading" data-text="LOADING . . .">
-          LOADING . . .
+      <div id="splash-content">
+        <div class="row center">
+          <div class="loading" data-text="LOADING . . .">
+            LOADING . . .
+          </div>
+          <div class="name">
+            Ben Cuan
+          </div>
         </div>
-        <div class="name">
-          Ben Cuan
+
+        <div class="row center no-select button-row">
+          <button id="github-button" class="expand-button">
+            <i class="fab fa-github fa-2x"></i>
+            <span class="expand-button-content hidden">
+              GitHub
+            </span>
+          </button>
+
+          <button id="linkedin-button" class="expand-button">
+            <i class="fab fa-linkedin fa-2x"></i>
+            <span class="expand-button-content hidden">
+              LinkedIn
+            </span>
+          </button>
+
+          <button id="email-button" class="expand-button">
+            <i class="fas fa-envelope fa-2x"></i>
+            <span class="expand-button-content hidden">
+              Email
+            </span>
+          </button>
+
+          <button id="resume-button" class="expand-button">
+            <i class="fas fa-file-alt fa-2x"></i>
+            <span class="expand-button-content hidden">
+              Resume
+            </span>
+          </button>
         </div>
       </div>
 
-      <div class="row center no-select button-row">
-        <button id="github-button" class="expand-button">
-          <i class="fab fa-github fa-2x"></i>
-          <span class="expand-button-content hidden">
-            GitHub
-          </span>
-        </button>
-
-        <button id="linkedin-button" class="expand-button">
-          <i class="fab fa-linkedin fa-2x"></i>
-          <span class="expand-button-content hidden">
-            LinkedIn
-          </span>
-        </button>
-
-        <button id="email-button" class="expand-button">
-          <i class="fas fa-envelope fa-2x"></i>
-          <span class="expand-button-content hidden">
-            Email
-          </span>
-        </button>
-
-        <button id="resume-button" class="expand-button">
-          <i class="fas fa-file-alt fa-2x"></i>
-          <span class="expand-button-content hidden">
-            Resume
-          </span>
-        </button>
-      </div>
 
     </div>
 
@@ -220,47 +226,54 @@
           Organizations
         </div>
         <div id="org-timeline">
-            <div id="org-2tbs" class="timeline-box">
-              <div class="row">
-                <div class="col-4 center">
-                  <img class="timeline-image" src="img/2tbs.png">
+          <div id="org-2tbs" class="timeline-box">
+            <div class="row">
+              <div class="col-4 center">
+                <img class="timeline-image" src="img/2tbs.png">
 
-                  <div class="lightgallery">
+                <div class="lightgallery">
 
-                    <button href="img/2tbs.png" data-src="img/2tbs.png" data-sub-html="Caption" class="org-button button-2tbs">View Gallery
-                      <img class="hidden" src="img/2tbs.png">
-                    </button>
+                  <button href="img/2tbs.png" data-src="img/2tbs.png" data-sub-html="Caption"
+                    class="org-button button-2tbs">View Gallery
+                    <img class="hidden" src="img/2tbs.png">
+                  </button>
 
-                    <div class="hidden gallery-item" data-src="img/bananium-icon.png" data-sub-html="Caption">
-                      <img src="img/bananium-icon.png">
-                    </div>
+                  <div class="hidden gallery-item" data-src="img/bananium-icon.png" data-sub-html="Caption">
+                    <img src="img/bananium-icon.png">
                   </div>
+                </div>
 
-                  <a target="_blank" href="https://2tbs.bananiumlabs.com/">
-                    <button class="org-button button-2tbs">Visit Site</button>
-                  </a>
-                </div>
-                <div class="col-8">
-                  <div class="center timeline-title">Two Terabyte Studios</div>
-                  <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus. Donec ultricies, magna vitae pharetra
-                  congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet turpis, et malesuada mi
-                  mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed imperdiet velit id
-                  lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla a nulla interdum
-                  rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis metus aliquam a.
-                  Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus. Pellentesque vitae nulla
+                <a target="_blank" href="https://2tbs.bananiumlabs.com/">
+                  <button class="org-button button-2tbs">Visit Site</button>
+                </a>
+              </div>
+              <div class="col-8">
+                <div class="center timeline-title">Two Terabyte Studios</div>
+                <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
+                  Donec ultricies, magna vitae pharetra
+                  congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
+                  turpis, et malesuada mi
+                  mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
+                  imperdiet velit id
+                  lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
+                  a nulla interdum
+                  rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
+                  metus aliquam a.
+                  Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
+                  Pellentesque vitae nulla
                   tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
-                </div>
               </div>
             </div>
-            <div id="org-bananium" class="timeline-box">
+          </div>
+          <div id="org-bananium" class="timeline-box">
 
-            </div>
-            <div id="org-launchhacks" class="timeline-box">
+          </div>
+          <div id="org-launchhacks" class="timeline-box">
 
-            </div>
-            <div id="org-trisagion" class="timeline-box">
+          </div>
+          <div id="org-trisagion" class="timeline-box">
 
-            </div>
+          </div>
 
         </div>
       </div>
