About section graphics and layout

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
     <div class="content-square" id="about-square">
       <div class="nohover-overlay"></div>
       <div class="content-label-top center">About</div>
+      <div class="content-square-details">
+      </div>
 
       <div class="content-square-splash">
         <img id="about-img" src="img/panda.svg">
@@ -330,6 +332,12 @@
         <i class="fas fa-times"></i>
       </div>
       <div class="modal-title">Bo</div>
+    </div>
+  </div>
+
+  <div id="about-modal-container">
+    <div class="code-modal about-modal center">
+      <div class="modal-title">About Me</div>
     </div>
   </div>
 
