Fix software hover

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <div class="col-3 code-image-container center">
                 <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
                 <div class="code-hover">
-                  Title
+                  <p>Title</p>
                 </div>
               </div>
             </div>
