Update code splash animation

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="nohover-overlay"></div>
       <div class="content-label-bottom center">Software + Games</div>
 
-      <div class="content-square-splash">
+      <div class="content-square-splash center">
         <div id="code-square-panda"></div>
         <div id="code-square-ground"></div>
       </div>
