Add 2018 site, add bananium image

--- a/index.html
+++ b/index.html
@@ -36,65 +36,6 @@
 
   <div id="white-overlay"></div>
 
-
-  <!-- REMOVE HIDDEN!!! -->
-  <div id="welcome-page" class="hidden">
-    <div id="skip-button-container">
-      <a id="skip-button">Skip</a>
-    </div>
-    <div class="container welcome-page-text">
-      <div id="int-text-1" class="glitch loading-intercepted-text typewriter" data-text="LOADING INTERCEPTED...">LOADING
-        INTERCEPTED...</div>
-      <div id="int-text-2" class="glitch loading-intercepted-text typewriter"
-        data-text="By your friendly neighborhood PandaBot! Hi! ʕ•ᴥ•ʔ">By your friendly neighborhood PandaBot! Hi! ʕ•ᴥ•ʔ
-      </div>
-      <div id="int-text-3" class="glitch loading-intercepted-text typewriter"
-        data-text="Just wanted to get your opinion on this:">Just wanted to get your opinion on this:</div>
-      <div id="int-text-4" class="loading-intercepted-text typewriter" data-text="What is your favorite animal?">What is
-        your favorite animal?</div>
-    </div>
-    <div class="container">
-      <div class="row" id="welcome-choice">
-        <div class="col-5">
-          <div class="welcome-box center" id="welcome-box-pixel">
-            <!-- Logo & Loading Animation. See css -->
-
-            <div class="grey-fill grey-fill-pixel center">
-              <div class="splash-image-pixel center">
-              </div>
-            </div>
-            <div class="welcome-box-label center" id="pixel-label">Panda</div>
-          </div>
-        </div>
-        <div class="col-2 welcome-choice-or">
-          -OR-
-        </div>
-        <div class="col-5">
-          <div class="welcome-box center" id="welcome-box-art">
-            <!-- Logo & Loading Animation. See css -->
-
-            <div class="grey-fill grey-fill-art center">
-              <div class="splash-image-art center">
-              </div>
-            </div>
-            <div class="welcome-box-label center" id="art-label">Panda</div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container welcome-page-text">
-
-      <div id="int-text-5" class="loading-intercepted-text typewriter hidden"
-        data-text="Thanks! I knew you'd like pandas too! ʕ•ᴥ•ʔ">Thanks! I knew you'd like pandas too! ʕ•ᴥ•ʔ
-      </div>
-      <div id="int-text-6" class="glitch loading-intercepted-text typewriter hidden"
-        data-text="If you ever change your mind, just click the panda! K bye!">If you ever change your mind, just click
-        the panda! K bye!
-      </div>
-    </div>
-  </div>
-
   <div class="splash-video-container">
     <video id="splash-video" autoplay muted>
       <source src="img/splashVideo.mp4" type="video/mp4">
@@ -331,7 +272,41 @@
       <div class="close-modal-button">
         <i class="fas fa-times"></i>
       </div>
-      <div class="modal-title">Bo</div>
+      <div class="modal-title">Bananium Labs</div>
+      <div class="row">
+        <div class="col-6 center">
+          <img class="timeline-image rounded-image" src="img/code/bananium.png">
+
+          <div class="row">
+            <div class="col-6 center">
+              <a target="_blank" href="https://bananiumlabs.com/">
+                <button class="org-button button-bananium">Visit Site</button>
+              </a>
+            </div>
+            <div class="col-6 center">
+              <a target="_blank" href="https://github.com/BananiumLabs/BananiumSite">
+                <button class="org-button button-bananium">Source Code</button>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
+            Donec ultricies, magna vitae pharetra
+            congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
+            turpis, et malesuada mi
+            mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
+            imperdiet velit id
+            lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
+            a nulla interdum
+            rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
+            metus aliquam a.
+            Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
+            Pellentesque vitae nulla
+            tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
+        </div>
+        </div>
+      </div>
     </div>
   </div>
 
