Add comments to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ben Cuan</title>
-  <meta name="description" content="Portfolio Site - Ben Cuan">
+  <meta name="description" content="Ben Cuan">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
@@ -26,7 +26,7 @@
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Khand&display=swap" rel="stylesheet"> -->
   <link
-    href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Cormorant+Garamond|Source+Sans+Pro&display=swap"
+    href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Source+Sans+Pro&display=swap"
     rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
@@ -48,6 +48,10 @@
       Click here to launch content
     </button> -->
 
+
+    <!-- ===============
+      SPLASH SCREEN
+    ================ -->
 
     <div class="container">
       <!-- Logo & Loading Animation. See css -->
@@ -111,8 +115,14 @@
     <div id="launch-button-rope" class="center"></div>
   </div>
 
+
+  <!-- ===============
+        CONTENT PORTAL
+      ================ -->
   <div id="content">
 
+
+    <!-- ABOUT SQUARE -->
     <div class="content-square" id="about-square">
       <div class="nohover-overlay"></div>
       <div class="content-label-top center">About</div>
@@ -123,6 +133,9 @@
         <img id="about-img" src="img/panda.svg">
       </div>
     </div>
+
+
+    <!-- CODE SQUARE -->
     <div class="content-square" id="code-square">
       <div class="nohover-overlay"></div>
       <div class="content-label-bottom center">Software + Games</div>
@@ -132,6 +145,10 @@
         <div id="code-square-ground"></div>
       </div>
 
+
+      <!-- ===============
+            CODE SQUARE CONTENTS
+          ================ -->
       <div class="content-square-details">
         <div class="container" id="code-content">
           <div class="code-section websites-section">
@@ -152,7 +169,7 @@
       </div>
     </div>
 
-
+    <!-- ORG SQUARE -->
     <div class="content-square" id="org-square">
       <div class="nohover-overlay"></div>
       <div class="content-label-bottom center hide-on-expand">
@@ -164,6 +181,10 @@
         <img id="org-img-2" class="center" src="img/2tbs.png"></img>
         <img id="org-img-3" class="center" src="img/bananium-icon.png"></img>
       </div>
+
+      <!-- ===============
+        ORG SQUARE CONTENTS
+      ================ -->
       <div class="content-square-details">
         <div id="org-label" class="center">
           Organizations
@@ -222,7 +243,7 @@
       </div>
     </div>
 
-
+    <!-- ART SQUARE -->
     <div class="content-square" id="art-square">
       <div class="nohover-overlay"></div>
       <div class="content-label-top center">Art + Design</div>
@@ -234,6 +255,10 @@
           </video>
         </div>
       </div>
+
+       <!-- ===============
+        ART SQUARE CONTENTS
+      ================ -->
       <div class="content-square-details">
         <div class="lightgallery">
           <a href="img/2tbs.png">
@@ -267,6 +292,9 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
+   <!-- ===============
+    CODE MODALS
+  ================ -->
   <div id="code-modals">
     <div class="code-modal websites-section center" id="img-mysite-modal">
       <div class="close-modal-button">
